8238851: Shenandoah: C1: Resolve into registers of correct type

Reviewed-by: shade